# TAD-Graph

./: INSTALL_TORCH.sh  README.md  pyproject.toml  requirements.txt
results/wandb/: latest-run
results/wandb/run-20241204_203045-8rnofvg5/: run-8rnofvg5.wandb
results/wandb/run-20241204_203045-8rnofvg5/files/: config.yaml  requirements.txt  wandb-metadata.json
results/wandb/run-20241204_203229-8dlxc70d/: run-8dlxc70d.wandb
results/wandb/run-20241204_203229-8dlxc70d/files/: conda-environment.yaml  config.yaml  wandb-metadata.json
scripts/: main.py
src/tadgraph/: paths.py
src/tadgraph/dataset_csv/tcga_blca/: survival_prediction.csv
src/tadgraph/dataset_csv/tcga_brca/: her2_status.csv  survival_prediction.csv  tumor_subtyping.csv
src/tadgraph/datasets/: __init__.py  datamodule.py  dataset_classification.py  dataset_h5.py  dataset_survival_prediction.py  utils.py  wsi_dataset.py
src/tadgraph/embedder/: ctrans.py  extract_features_fp.py  extract_features_fp.sh  extract_features_hierarchy.py  extract_patches_for_thunmnail.py
src/tadgraph/models/: base_trainer.py  clam_model.py  conv_layers.py  gnn.py  tad_graph_config.yaml  tad_graph_module.py  utils.py
src/tadgraph/preprocess/: create_patches_fp.py  create_preserved_site_cv.py  create_splits_cv.py  prepare_task_csv.py  prepare_transMIL_splits.py  read_her2_status.py  slidegraph_construction.py
src/tadgraph/utils/: callbacks.py  heatmap_utils.py  patch_localization_utils.py  survival_loss.py  utils.py
src/tadgraph/wsi_core/: WholeSlideImage.py  wsi_utils.py
(+464 files in other folders)
